Revert "fix: Resolve issue with search bar placeholder cutoff (#167)"
This reverts commit 2b6228c1331a0a4594289321817f2264516973b7.

--- a/src/styles/pages/home.module.css
+++ b/src/styles/pages/home.module.css
@@ -67,7 +67,7 @@
   align-items: center;
   margin-right: 15px;
   background: #fff;
-  min-width: 255px;
+  min-width: 180px;
 }
 
 .search-input {
